Elimina o uso de 'Admin', ajusta a busca para Usuário, Cliente e Loja, melhora a consistência